(PDB-5022) Replace withopen override with --illegal-access=deny